[package]
name = "t_trace"
version = "0.1.0"
edition = "2024"
authors = ["Your Name <you@example.com>"]
description = "A simple, fast terminal plugin to track the execution time of shell commands."
repository = "TODO"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
comfy-table = "7.1.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
