[package]
name = "t_trace"
version = "0.1.2"
edition = "2024"
authors = ["https://github.com/M-Komorek"]
description = "High-performance, command-line statistics tracker for your shell"
license = "MIT"
repository = "https://github.com/M-Komorek/t_trace"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
comfy-table = "7.1.4"
daemonize = "0.5.0"
dirs = "6.0.0"
libc = "0.2.174"
nix = { version = "0.30.1", features = ["signal"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
tokio = { version = "1.47.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.20.0"
tokio-test = "0.4.4"
